feat: adding feature delete task
